# python-poetry-docker-example

./: .dockerignore  .gitignore  Dockerfile  LICENCE  README.md  gunicorn_conf.py  pyproject.toml
.github/workflows/: lint-and-test.yml  main.yml
app/: main.py
app/config/: ebay-config-user.yaml
docker/: Dockerfile
scripts/: build.sh  lint.sh  test.sh
tests/: conftest.py  test_main.py
